tests/baselines/reference/implementsClauseAlreadySeen.errors.txt
tests/cases/compiler/implementsClauseAlreadySeen.ts(4,22): error TS1175: 'implements' clause already seen.


==== tests/cases/compiler/implementsClauseAlreadySeen.ts (1 errors) ====
    class C {
        
    }
    class D implements C implements C {
                         ~~~~~~~~~~
!!! error TS1175: 'implements' clause already seen.
        baz() { }
    }